# socai

./: .gitignore  .vercelignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md  SKILL.md  codex_dy4.txt  dy1_codex.txt  dy2_codex.txt  dy3_codex.txt  dy5_codex.txt  install.md  pyproject.toml  self_creation_memo.md
.claude/skills/socai-release/: SKILL.md
.claude/skills/socai-release/scripts/: create-release.sh
.claude/skills/socai-site-deployment/: SKILL.md
.github/scripts/: package-cli-release.py  set-app-version.py
.github/workflows/: release.yml
.pi/skills/socai-site-deployment/: SKILL.md
app/: .gitignore  package.json  pnpm-lock.yaml
app/src/: capability_tests.ts  main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons-dev/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  tasks.rs  timeline.rs
app/src-tauri/src/cdp/: commands.rs  endpoint.rs  events.rs  mod.rs  state.rs  supervisor.rs
app/src/lib/: i18n.ts  markdown.ts
app/src/panels/: task_history.ts  task_new.ts  tasks.ts
apps/cli/: Cargo.toml
apps/cli/src/: daemon.rs  main.rs  tui.rs
apps/tui/: Cargo.toml
apps/tui/src/: main.rs
cli/: Cargo.toml  build.rs
cli/src/: bridge.rs  daemon.rs  doctor.rs  main.rs  tracking.rs  tui.rs  version.rs
core/: Cargo.toml  __init__.py  cli.py
core/agent/: backends.py  loop.py  run_state.py  tool.py
core/browser/: __init__.py
core/browser/cdp/: __init__.py  browser.py  discovery.py  managed.py  page.py  task_session.py  transport.py
core/browser/tools/: browser.py
core/sites/: __init__.py
core/sites/xhs/: __init__.py  runtime.py  tools.py
core/src/: lib.rs
core/src/agent/: api_errors.rs  compaction.rs  file_bash_tools.rs  llm.rs  loop.rs  memory.rs  mod.rs  provider.rs  report.rs  run_logging.rs  run_state.rs  signature.rs  system_prompt.rs  tool.rs
core/src/agent/llm/: anthropic.rs  openai.rs
core/src/cdp/: connection.rs  endpoint.rs  lifecycle.rs  mod.rs  pages.rs  raw_client.rs  session.rs  snapshot.rs
core/src/media/: audio.rs  common.rs  image.rs  md5.rs  mod.rs  processor.rs  timing.rs  video.rs
core/src/runtime/: engine.rs  mod.rs
core/src/sites/: creation_skill.md  mod.rs  registry.rs  runner.rs
core/src/sites/creation/: SKILL.md
core/src/sites/douyin/: entities.rs  knowledge.md  mod.rs  page.rs  page_scripts.js  tools.rs
core/src/sites/dy/: entities.rs  knowledge.md  mod.rs  page.rs  page_scripts.js  tools.rs
core/src/sites/xhs/: entities.rs  history.rs  knowledge.md  media_manifest.rs  mod.rs  page.rs  page_scripts.js  tools.rs
crates/agent/: Cargo.toml
crates/agent/src/: api_errors.rs  compaction.rs  lib.rs  llm.rs  loop.rs  memory.rs  provider.rs  report.rs  run_logging.rs  run_state.rs  system_prompt.rs  tool.rs
crates/agent/src/llm/: anthropic.rs  openai.rs
crates/browser/: Cargo.toml
crates/browser/examples/: connect_and_eval.rs  eval_xhs_extractor.rs
crates/browser/src/: lib.rs  state.rs  task.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: audio.rs  common.rs  image.rs  lib.rs  processor.rs  timing.rs  video.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sites/: Cargo.toml
crates/sites/examples/: extract_note.rs
crates/sites/src/: lib.rs
crates/sites/src/xhs/: entities.rs  mod.rs  page.rs  page_scripts.js  runtime.rs  tools.rs
docs/: browser-automation-evolution.md  cli-install-qa.md  data-model.md  release-flow.md  telemetry-dashboard.md  telemetry-release-smoke-test.md  telemetry-runbook.md  telemetry-schema.md  website-deployment.md  website-launch-qa.md  xhs-tools-landscape.md
docs/development/: telemetry-runbook.md
docs/pr-21-snapshots/: README.md
parity/: AGENTS.md  README.md
scripts/: install-cli.ps1  install-cli.sh  run_xhs_extract_note.py  telemetry-release-smoke-test.sh  xhs_cdp_smoke.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
site/api/: telemetry.js  telemetry.test.js
site/public/: robots.txt  site.webmanifest  sitemap.xml
site/scripts/: sync-release-metadata.mjs
site/src/components/: SiteFooter.astro  SiteHeader.astro
site/src/data/: release.json
site/src/lib/: i18n.ts  release.ts
site/src/pages/: connect.astro  contact.astro  index.astro
site/src/scripts/: site.ts
site/src/styles/: global.css
site/tests/: telemetry.test.js
socai/: cli.py
socai/agent/: __init__.py  api_errors.py  backends.py  loop.py  run_logging.py  tool.py
socai/browser/cdp/: __init__.py  browser.py  endpoint.py  page.py  task_session.py
socai/browser/tools/: __init__.py  browser.py  page_scripts.js
socai/cli/: __init__.py  commands.py  daemon.py  daemon_client.py  repl.py  runner.py
socai/media/: __init__.py  audio.py  common.py  image.py  processor.py  timing.py  video.py
socai/sites/: knowledge.py  toolbox.py
socai/sites/xhs/: __init__.py  entities.py  extractors.js  history.py  knowledge.md  page_scripts.js  runtime.py  tools.py
tests/: test_browser_tools.py  test_cdp_browser.py  test_xhs_runtime.py
