[package]
name = "socai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "socai"
path = "src/main.rs"

[dependencies]
socai-core.workspace = true
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true }
futures.workspace = true
tokio-tungstenite.workspace = true
uuid = { version = "1", features = ["v4"] }
tracing-subscriber.workspace = true
rustyline.workspace = true
inquire.workspace = true

[lints]
workspace = true
