[package]
name = "socai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
futures.workspace = true
async-tungstenite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
base64.workspace = true
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
# Image compositing/resizing for batching note images into 2x2 vision grids.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile = "3"

[lints]
workspace = true
