[package]
name = "socai_app"
version = "0.1.0"
description = "socai desktop app"
edition = "2021"

[lib]
name = "socai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chromiumoxide = "0.7"
