[package]
name = "socai_app"
version = "0.1.0"
description = "socai desktop app"
edition = "2021"

[lib]
name = "socai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
socai-core.workspace = true
