[package]
name = "socai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "socai"
path = "src/main.rs"

[dependencies]
socai-agent.workspace = true
socai-sites.workspace = true
socai-runtime.workspace = true
socai-browser.workspace = true
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing-subscriber.workspace = true

[lints]
workspace = true
