[package]
name = "socai-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "socai-tui"
path = "src/main.rs"

[dependencies]
socai-core.workspace = true
socai-sites.workspace = true
anyhow.workspace = true
tokio = { workspace = true }

[lints]
workspace = true
