[package]
name = "socai-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
