[package]
name = "socai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
