[package]
name = "socai-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
socai-agent.workspace = true
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
reqwest.workspace = true
futures.workspace = true

[lints]
workspace = true
