[package]
name = "socai-sites"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
socai-browser.workspace = true
socai-agent.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
